Update complex link and island to doc

--- a/app/assets/stylesheets/partials/abstractions/_complex-link.scss
+++ b/app/assets/stylesheets/partials/abstractions/_complex-link.scss
@@ -3,15 +3,14 @@
    ====================================================================================== */
 
 /*
-	Usage: 
-		Add link styles to only selected items within links.
+	Add link styles to only selected items within links.
 
+	Styleguide Complex Link
+*/
+
+/*
 	Note: 
 		The base link styles are repeated here so not very DRY (need to look into this).
-	
-	Demo:
-		Style Guide -> Abstractions -> Complex Link
-	
 	Credit: 
 		http://github.com/necolas/suit-utils/blob/master/link.css#L18
 */
