Fix up islet doc

--- a/app/assets/stylesheets/partials/abstractions/_island.scss
+++ b/app/assets/stylesheets/partials/abstractions/_island.scss
@@ -15,7 +15,9 @@
 /*
   Same as island, but with half the spacing.
   
-  .islet              - Top and bottom padding only
+  .islet--top-btm      - Top and bottom padding only
+  .islet--center      - Align text to the center
+  .islet--fill        - Solid background
 
   Styleguide Islet
 */
