--- a/app/assets/stylesheets/styleguide/main.scss
+++ b/app/assets/stylesheets/styleguide/main.scss
@@ -8,7 +8,6 @@ Style Guide stylesheet
 
 */
 
-
 /* ======================================================================================
    @CUSTOM FONTS
    ====================================================================================== */
@@ -399,7 +398,11 @@ body {
 	background-color: #f8f8f8;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	@include .txt-break-word;
+	word-wrap: break-word !important;
+	-ms-word-break: break-all !important;
+  word-break: break-all !important;
+	/* Non standard for webkit */
+  word-break: break-word !important;
 }
 
 /* [ALERTS]
