--- a/app/views/styleguides/_styleguide_block.html.erb
+++ b/app/views/styleguides/_styleguide_block.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
   <div class="sg-example">
-    <%= example_html.html_safe %>
+    <%= example_html.strip.gsub(' $modifier_class', '').html_safe %>
   </div>
 
   <% section.modifiers.each do |modifier| %>
