Updated slats and columns doc

--- a/app/assets/stylesheets/partials/abstractions/_columns.scss
+++ b/app/assets/stylesheets/partials/abstractions/_columns.scss
@@ -3,12 +3,18 @@
    ====================================================================================== */
 
 /*
-	Usage: 
-		Easily create columns of text using CSS3.
+	Easily create columns of text using CSS3.
 	
-	Demo:
-		Style Guide -> Abstractions -> Columns
-	
+  .txt-cols--2        - 2 columns
+  .txt-cols--3        - 3 columns
+  .txt-cols--4        - 4 columns
+  .txt-cols--5        - 5 columns
+  .txt-cols--6        - 6 columns
+
+	Styleguide Columns
+*/
+
+/*
 	Credit: 
 		https://github.com/csswizardry/inuit.css/blob/master/inuit.css/objects/_columns.scss
 */
