--- a/app/assets/stylesheets/partials/abstractions/_slats.scss
+++ b/app/assets/stylesheets/partials/abstractions/_slats.scss
@@ -3,12 +3,12 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Place any image- and text-like content side-by-side.
+	Place any image- and text-like content side-by-side.
 
-	Demo:
-		Style Guide -> Abstractions -> Slats
+	Styleguide Slats
+*/
 
+/*
 	Credit:
 		http://stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code
 */
