Update arrows doc

--- a/app/views/styleguides/abstractions.html.erb
+++ b/app/views/styleguides/abstractions.html.erb
@@ -144,20 +144,9 @@
 <!-- //Columns -->
 
 <!-- Arrows -->
-<div class="sg-h2">Arrows</div>
-<div class="sg-note">Creates CSS arrows.</div>
-
-<div class="sg-h3">Up</div>
-<span class="arrow arrow--up"></span>
-
-<div class="sg-h3">Down</div>
-<span class="arrow arrow--down"></span>
-
-<div class="sg-h3">Left</div>
-<span class="arrow arrow--left"></span>
-
-<div class="sg-h3">Right</div>
-<span class="arrow arrow--right"></span>
+<%= styleguide_block 'Arrows' do %>
+<span class="arrow $modifier_class"></span>
+<% end %>
 <!-- //Arrows -->
 
 <!-- Divider -->
