--- a/app/assets/stylesheets/partials/abstractions/_arrows.scss
+++ b/app/assets/stylesheets/partials/abstractions/_arrows.scss
@@ -3,14 +3,19 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Creates CSS arrows.
+  Creates CSS arrows.
 
+  .arrow--up          - Up arrow
+  .arrow--down        - Down arrow
+  .arrow--left        - Left arrow
+  .arrow--right       - Right arrow
+
+	Styleguide Arrows
+*/
+
+/*
 	Note:
 		Same as: 'utils/placeholders/arrows' except this version doesn't apply to an existing element rather it's an independent element which is more flexible.
-
-	Demo:
-		Style Guide -> Abstractions -> Arrows
 */
 
 /* Set variables */
