Update divider doc

--- a/app/assets/stylesheets/partials/abstractions/_divider.scss
+++ b/app/assets/stylesheets/partials/abstractions/_divider.scss
@@ -3,11 +3,12 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Apply a dividing line between two elements.
+  Apply a dividing line between two elements.
+	
+  .divider--lrg         - Larger spacing
+  .divider--sml         - Smaller spacing
 
-	Demo:
-		Style Guide -> Abstractions -> Divider
+	Styleguide Divider
 */
 
 .divider {
