Update modifier class table styles

--- a/app/views/styleguides/_styleguide_block.html.erb
+++ b/app/views/styleguides/_styleguide_block.html.erb
@@ -11,7 +11,7 @@
   <table class="sg-table" caption="<%= section.section %> modifier classes">
     <thead>
       <tr>
-        <th>Modifier Classes</th>
+        <th class="sg-table__class">Modifier Classes</th>
         <th>Description</th>
       </tr>
     </thead>
