--- a/app/views/styleguides/abstractions.html.erb
+++ b/app/views/styleguides/abstractions.html.erb
@@ -85,18 +85,14 @@
 
 <!-- Island -->
 <%= styleguide_block 'Island' do %>
-<div class="sg-demo-boxed">
-  <div class="island $modifier_class">
-    <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
-  </div>
+<div class="island $modifier_class">
+  <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
 </div>
 <% end %>
 
 <%= styleguide_block 'Islet' do %>
-<div class="sg-demo-boxed">
-  <div class="islet $modifier_class">
-    <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
-  </div>
+<div class="islet $modifier_class">
+  <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
 </div>
 <% end %>
 <!-- //Island -->
@@ -104,7 +100,7 @@
 <!-- Slats -->
 <%= styleguide_block 'Slats' do %>
   <div class="sg-h3">Small</div>
-  <div class="slats sg-demo-boxed-padded">
+  <div class="slats">
     <img src="http://placekitten.com/60/60" alt="" class="slats__img">
       <div class="slats__body">
         <p>Ne mel utroque apeirian, eum ex cibo choro. Discere commune concludaturque eum te, eros movet comprehensam eum id. Cu nulla salutatus duo. Phaedrum efficiantur vix at, ius ancillae reprimique in, percipit mandamus assueverit eu eum. Alia natum vidisse id ius, vide soleat vis no.</p>
@@ -113,7 +109,7 @@
 <% end %>
 
 <div class="sg-h3">Medium</div>
-<div class="slats sg-demo-boxed-padded">
+<div class="slats">
   <a href="#" class="slats__img"><img src="http://placekitten.com/110/110" alt=""></a>
     <div class="slats__body">
       <p>Ne mel utroque apeirian, eum ex cibo choro. Discere commune concludaturque eum te, eros movet comprehensam eum id. Cu nulla salutatus duo. Phaedrum efficiantur vix at, ius ancillae reprimique in, percipit mandamus assueverit eu eum. Alia natum vidisse id ius, vide soleat vis no.</p>
@@ -123,7 +119,7 @@
 </div>
 
 <div class="sg-h3">Large</div>
-<div class="slats sg-demo-boxed-padded">
+<div class="slats">
   <div class="slats__img--rev">
     <img src="http://placekitten.com/220/220" alt="">
     <strong>Nice kitty</strong>
