Update styleguide template

--- a/app/views/styleguides/_styleguide_block.html.erb
+++ b/app/views/styleguides/_styleguide_block.html.erb
@@ -1,5 +1,5 @@
 <div class="sg-section">
-  <div class="sg-h2"><%= section.section %> <small><%= section.filename %></small></div>
+  <div class="sg-h2"><%= section.section %> <code><%= section.filename %></code></div>
 
   <% unless section.description.blank? %>
     <div class="sg-note">
