Update typography doc

--- a/app/assets/stylesheets/partials/base/_headings.scss
+++ b/app/assets/stylesheets/partials/base/_headings.scss
@@ -3,6 +3,10 @@
    ====================================================================================== */
 
 /*
+  Styleguide Headings
+*/
+
+/*
 	Note: to target any heading of any level use this generic heading class: `.hn`.
 */
 
