--- a/app/assets/stylesheets/partials/base/_lists.scss
+++ b/app/assets/stylesheets/partials/base/_lists.scss
@@ -2,6 +2,11 @@
    @BASE -> LISTS
    ====================================================================================== */
 
+/*
+  Styleguide Lists
+*/
+
+
 /* [UNORDERED / ORDERED]
 -------------------------------------------------------*/
 .list,
