--- a/app/assets/stylesheets/partials/base/_paragraphs.scss
+++ b/app/assets/stylesheets/partials/base/_paragraphs.scss
@@ -1,5 +1,8 @@
 /* ======================================================================================
    @BASE -> PARAGRAPHS
    ====================================================================================== */
+/*
+  Styleguide Paragraphs
+*/
 
 p {@extend %mrg-base;}
