--- a/app/views/styleguides/default-element-styles-typography.html.erb
+++ b/app/views/styleguides/default-element-styles-typography.html.erb
@@ -1,31 +1,21 @@
----
-title: Default Elements - Typography
----
-
 <div class="sg-h1">Default Element Styles - Typography</div>
 <div class="sg-note sg-note--outdent">All default elements e.g. paragraphs, links, headings, images, etc. are given base styles that define how the element should look in all occurrences on the page. Base styles include setting heading sizes, default link styles, default font styles, etc. This page shows all the default elements concerned with <span class="pt-sans-narrow-bold">typography</span>.</div>
 
 <!-- Headings -->
-<div class="sg-h2">Headings</div>
-
+<%= styleguide_block 'Headings' do %>
 <h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
+<% end %>
 <!-- //Headings -->
 
 <!-- Paragraphs -->
-<div class="sg-h2">Paragraphs</div>
-
+<%= styleguide_block 'Paragraphs' do %>
 <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
 <p>Ne mel utroque apeirian, eum ex cibo choro. Discere commune concludaturque eum te, eros movet comprehensam eum id. Cu nulla salutatus duo. Phaedrum efficiantur vix at, ius ancillae reprimique in, percipit mandamus assueverit eu eum. Alia natum vidisse id ius, vide soleat vis no.</p>
+<% end %>
 <!-- //Paragraphs -->
 
 <!-- Lists -->
-<div class="sg-h2">Lists</div>
-
+<%= styleguide_block 'Lists' do %>
 <div class="sg-h3">Ordered</div>
 <ol class="list">
     <li>Semper apeirian</li>
@@ -95,53 +85,8 @@ title: Default Elements - Typography
     <dt>Natoque penatibus amet</dt>
     <dd>Cu verear euripidis</dd>
 </dl>
+<% end %>
 <!-- //Lists -->
-
-<!-- Blockquote -->
-<div class="sg-h2">Blockquote</div>
-
-<div class="sg-h3">Without Author</div>
-<figure class="quote">
-	<blockquote>
-		<p>Ius ad admodum deserunt, vix tempor instructior et, ridens expetendis theophrastus ex per. Ubique verterem no vis, gloriatur vulputate deterruisset et nam. Doming electram ea has, quo tation mucius petentium ea. Et nec tantas docendi postulant. Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et me.</p>
-	</blockquote>
-</figure>
-
-<div class="sg-h3">With Author</div>
-<figure class="quote">
-    <blockquote>
-        <p>Ius ad admodum deserunt, vix tempor instructior et, ridens expetendis theophrastus ex per. Ubique verterem no vis, gloriatur vulputate deterruisset et nam. Doming electram ea has, quo tation mucius petentium ea. Et nec tantas docendi postulant. Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et me.</p>
-    </blockquote>
-    <figcaption>Dr. Julius Hibbert</figcaption>
-</figure>
-<!-- //Blockquote -->
-
-<!-- Address -->
-<div class="sg-h2">Address</div>
-
-<address>Website by CJ Designs</address>
-<!-- //Address -->
-
-<!-- Horizontal Rule -->
-<div class="sg-h2">Horizontal Rule</div>
-
-<p>Ius ad admodum deserunt, vix tempor instructior et, ridens expetendis theophrastus ex per. Ubique verterem no vis, gloriatur vulputate deterruisset et nam. Doming electram ea has, quo tation mucius petentium ea. Et nec tantas docendi postulant. Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
-<hr>
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et me.</p>
-<!-- //Horizontal Rule -->
-
-<!-- Pre -->
-<div class="sg-h2">Pre</div>
-
-<pre>
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et me.
-
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-         Cum sociis natoque penatibus et me.
-</pre>
-<!-- //Pre -->
 
 <!-- Everything Else -->
 <div class="sg-h2">Everything Else</div>
@@ -180,21 +125,15 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 <div class="sg-h2">Most Common Elements Grouped Together</div>
 
 <h1>Heading 1</h1>
-<p>Lorem ipsum dolor sit amet, <a href="http://google.com" rel="external">aenean commodo</a> adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet.</p>
+<p>Lorem ipsum dolor sit amet, <a href="http://google.com" rel="external">aenean commodo</a> adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo <strong>apeirian</strong> dolor. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet.</p>
 <p>Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
-<h2>Heading 2</h2>
-<p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
-<p>Ne mel utroque apeirian, eum ex cibo choro. Discere <em>commune</em> concludaturque eum te, eros movet comprehensam eum id. Cu nulla salutatus duo. Phaedrum efficiantur vix at, ius ancillae reprimique in, percipit mandamus assueverit eu eum. Alia natum vidisse id ius, vide soleat vis no.</p>
-<h3>Heading 3</h3>
 <ol class="list">
     <li>Nec at quodsi</li>
     <li>Sanctus platonem</li>
     <li>Perfecto quaestio gubergren</li>
     <li>Semper apeirian</li>
 </ol>
-<p>Lorem ipsum dolor sit amet, <a href="#">consectetuer</a> adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet.</p>
-<p>Adhuc lorem conceptam an usu, perfecto quaestio gubergren vel eu. Malis dictas id ius, ea duo viris delectus expetenda. Cu verear euripidis vel, quo no maluisset reprimique, an magna altera principes sit. Te sit case diceret, cu etiam homero offendit pri. Sed cu malorum omittam probatus, sint tollit delicatissimi quo cu, nihil eleifend ei pri. Mel dicat timeam debitis ex, autem mandamus maiestatis id pri.</p>
-<h4>Heading 4</h4>
+<p>Lorem adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus amet. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet</p>
 <ul class="list">
     <li>Semper apeirian</li>
     <li>Virtute omittam
@@ -213,20 +152,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
     <li>Cu verear euripidis</li>
     <li>Natoque penatibus amet</li>
 </ul>
-<p>Ius ad admodum deserunt, vix tempor instructior et, ridens expetendis theophrastus ex per. Ubique verterem no vis, gloriatur vulputate deterruisset et nam. Doming electram ea has, quo tation mucius petentium ea. Et nec tantas docendi postulant. Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
-<h5>Heading 5</h5>
-<p>Vis ubique virtute omittam ea. Pro <strong>apeirian</strong> pertinax ea, mel epicurei pericula electram eu. Eos partem nominavi ocurreret eu, clita volumus atomorum cum ad. Id qui quodsi vulputate, has ex illud facer, vocibus consequat ut per. Vel id bonorum invidunt reformidans, eum regione convenire at.</p>
-<p>Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
-<h6>Heading 6</h6>
-<p>Vis in erant tantas deterruisset, mnesarchum delicatissimi nam ad. Veniam possim dolorum ex eum. Mundi semper vix ut. Id vivendum suscipiantur nam, mazim option no nam, in homero nostrum epicurei has. Rebum regione alterum at vim.</p>
-<figure class="quote">
-    <blockquote>
-        <p>Ius ad admodum deserunt, vix tempor instructior et, ridens expetendis theophrastus ex per. Ubique verterem no vis, gloriatur vulputate deterruisset et nam. Doming electram ea has, quo tation mucius petentium ea. Et nec tantas docendi postulant. Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et me.</p>
-    </blockquote>
-    <figcaption>Dr. Julius Hibbert</figcaption>
-</figure>
-<p>Vis ubique virtute omittam ea. Pro <strong>apeirian</strong> pertinax ea, mel epicurei pericula electram eu. Eos partem nominavi ocurreret eu, clita volumus atomorum cum ad. Id qui quodsi vulputate, has ex illud facer, vocibus consequat ut per. Vel id bonorum invidunt reformidans, eum regione convenire at.</p>
+<p>Vis ubique virtute omittam ea. Pro <strong>apeirian</strong> pertinax ea, mel epicurei pericula electram eu. Aenean massa. Cum sociis natoque penatibus amet. Lorem ipsum dolor sit amet</p>
 <dl>
     <dt>Perfecto quaestio gubergren</dt>
     <dd>Malis dictas</dd>
@@ -235,5 +161,4 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
     <dt>Natoque penatibus amet</dt>
     <dd>Cu verear euripidis</dd>
 </dl>
-<p>Ex nisl vocent vocibus vis. Ei autem definitionem nam. His dolore persequeris id. Ex feugiat veritus est, vix ea quis feugait voluptatibus. Meis mazim nam at, vel no nominavi placerat, usu et utinam docendi antiopam.</p>
 <!-- //Most Common Elements Grouped Together -->
