Update table doc

--- a/app/assets/stylesheets/partials/base/_tables.scss
+++ b/app/assets/stylesheets/partials/base/_tables.scss
@@ -3,6 +3,15 @@
    ====================================================================================== */
 
 /*
+  Table element
+
+  .table-striped        - Stripey table
+  .table-bordered       - Bordered table
+
+  Styleguide Tables
+*/
+
+/*
 	Note: these are very basic styles hence them being in 'base', if you're needing something more styled then your table should become a 'module' inheriting from here.
 */
 
