Added regex to remove empty class attr

--- a/app/views/styleguides/_styleguide_block.html.erb
+++ b/app/views/styleguides/_styleguide_block.html.erb
@@ -41,5 +41,5 @@
     </div>
   <% end %>
 
-  <pre class="sg-code-block"><code class="language-markup"><%= example_html.strip.gsub(' $modifier_class', '') %></code></pre>
+  <pre class="sg-code-block"><code class="language-markup"><%= example_html.strip.gsub(' $modifier_class', '').gsub(" class=\"\"", "") %></code></pre>
 </div>
